# douyin_video_download

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/tanstack-ai/: SKILL.md
.agents/skills/tanstack-cli/: SKILL.md
.agents/skills/tanstack-config/: SKILL.md
.agents/skills/tanstack-db/: SKILL.md
.agents/skills/tanstack-devtools/: SKILL.md
.agents/skills/tanstack-pacer/: SKILL.md
.agents/skills/tanstack-ranger/: SKILL.md
.agents/skills/tanstack-store/: SKILL.md
.agents/skills/tanstack-table/: SKILL.md
.github/workflows/: build-desktop.yml
chrome-extension/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js  service-worker.js  test-service-worker.mjs
docs/: packaging.md
scripts/: init-extension-key.mjs  pack-extension.mjs  release.mjs
src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_tray.rs  commands.rs  cookie_store.rs  douyin_client.rs  download_engine.rs  lib.rs  local_api.rs  main.rs  scheduler.rs  storage.rs  types.rs
src/components/: animated-page.tsx  app-shell.tsx  empty-state.tsx  page-header.tsx  status-badge.tsx
src/components/ui/: alert-dialog.tsx  checkbox.tsx  (+3 more)
src/lib/: icons.tsx  motion.ts  player-window.ts  tauri.ts  use-debounced-value.ts  utils.ts
src/routes/: __root.tsx  ai.tsx  cookies.tsx  index.tsx  monitors.tsx  player.tsx  videos.tsx
src/types/: app.ts
(+18 files in other folders)
