[package]
name = "douyin-video-download"
version = "0.1.0"
description = "Douyin desktop monitor and video downloader"
authors = ["you"]
edition = "2021"

[lib]
name = "douyin_video_download_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.5.0", features = ["tray-icon", "protocol-asset"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "net"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Keep encrypted cookies in the platform's native credential store.  These are
# target-specific because keyring deliberately requires opting into each OS
# backend.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native-sync-persistent"] }
